--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,6 @@
 services:
   - type: web
     name: meetly-ai-backend
-    env: python
+    env: docker
     rootDir: backend
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    pythonVersion: 3.11.9
+    dockerfilePath: backend/Dockerfile
