--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-# === Meetly.AI Backend Requirements ===
-fastapi==0.110.0
-uvicorn==0.29.0
-pydantic==2.7.0
-python-dotenv==1.0.1
-google-generativeai==0.6.0
-requests==2.31.0
+fastapi
+uvicorn
+google-generativeai
+python-dotenv
+pydantic
+requests
+sqlite-utils
