--- a/frontend_vite/package.json
+++ b/frontend_vite/package.json
@@ -16,6 +16,8 @@
     "@tabler/icons-react": "^3.35.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "react": "^19.2.0",
     "react-countup": "^6.5.3",
