--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,7 @@
-fastapi
-uvicorn
-google-generativeai
-python-dotenv
-pydantic
-requests
-sqlite-utils
-packaging
+fastapi==0.115.2
+uvicorn==0.32.0
+google-generativeai==0.8.1
+python-dotenv==1.0.1
+requests==2.32.3
+sendgrid==6.11.0
+pydantic==2.9.2
