--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,26 @@
 __pycache__/
 *.py[cod]
 *.pyo
+*.pyd
 *.db
 *.sqlite3
+*.pid
+*.pycache/
 .venv/
+venv/
 .env
 .env.local
+.env.*
 *.log
+.DS_Store
 
-# === Node / React / Vite ===
+# === Dependencies & Build Artifacts ===
+build/
+dist/
+*.egg-info/
+pip-wheel-metadata/
+
+# === Node / React / Vite (if frontend exists inside repo) ===
 node_modules/
 dist/
 build/
@@ -17,12 +29,16 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # === IDE / OS Files ===
 .vscode/
-.DS_Store
+.idea/
 Thumbs.db
 
-# Environment files
-.env
-.env.*
+# === Test / Coverage ===
+htmlcov/
+.tox/
+pytest_cache/
+coverage/
+.cache/
