--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -21,3 +21,7 @@ steps:
       - --project=ai-meeting-intelligence
 
 timeout: 1200s
+
+# ✅ Add this block to fix your build failure
+options:
+  logging: CLOUD_LOGGING_ONLY
