--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,27 +1,27 @@
 steps:
-  # Step 1: Install dependencies
+  # Step 1: Install dependencies (inside backend/)
   - name: python:3.12-slim
     entrypoint: bash
     args:
       - -c
       - |
+        cd backend
         pip install --upgrade pip
         pip install -r requirements.txt
 
-  # Step 2: Run Cloud Run deploy
+  # Step 2: Deploy to Cloud Run from backend/
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: gcloud
     args:
       - run
       - deploy
       - meetly-ai-backend
-      - --source=.
+      - --source=backend
       - --region=asia-south1
       - --allow-unauthenticated
       - --project=ai-meeting-intelligence
 
 timeout: 1200s
 
-# ✅ Add this block to fix your build failure
 options:
   logging: CLOUD_LOGGING_ONLY
